--- a/index.html
+++ b/index.html
@@ -422,8 +422,7 @@
                                 <b>Microsoft</b>
                             </h5>
                             <h6 class="cv-text-teal">
-                                <i class="fa fa-calendar fa-fw cv-margin-right"></i>Nov 2017 -
-                                <span class="cv-tag cv-teal cv-round">Current</span>
+                                <i class="fa fa-calendar fa-fw cv-margin-right"></i>Nov 2017 - Jan 2018
                             </h6>
                             <p>Translating Visual Studio Code to Bulgarian</p>
                             <hr>
