fixing small errors

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
                         <div class="cv-container">
                             <h5 class="cv-opacity">
-                                <b><a target="blank" href="https://www.nbu.bg/">New Bulgarian University</a></b>
+                                <b><a target="blank" href="https://www.nbu.bg/en">New Bulgarian University</a></b>
                             </h5>
                             <h6 class="cv-text-teal">
                                 <i class="fa fa-calendar fa-fw cv-margin-right"></i>2015 - 2015</h6>
@@ -292,8 +292,8 @@
                                 <i class="fa fa-calendar fa-fw cv-margin-right"></i>Feb 2018 -
                                 <span class="cv-tag cv-teal cv-round">Current</span>
                             </h6>
-                            <p>A platform inspired by the book crossing initiative and the trends of shared economy. The main idea is to give people the possibility to connect with others that have a given book in a given region and exchange one book for
-                                another without actually putting any monetary value in the exchanged books. This way small communites can be created withing cities/regions/counties or even within a company/school or university. The biggest goal is to
+                            <p>A platform inspired by the BookCrossing initiative and the trends of shared economy. The main idea is to give people the possibility to connect with others that have a given book in a given region and exchange one book for
+                                another without actually putting any monetary value in the exchanged books. This way small communities can be created within cities/regions/counties or even within a company/school or university. The biggest goal is to
                                 create the biggest open library that enables the books to travel all over the world. Future thoughts for the platform is to implement a blockchain (possibly <b>Hyperledger</b>) solution so that all exchanges can be kept
                                 in a ledger. <br> For the front-end we are using <b>React.js</b> with the material design MDL Lite library for styling the interface. For the back-end we are using <b>ASP.NET Core with EF Core and SQL Server.</b>
                             </p>
@@ -332,7 +332,7 @@
                         <i class="fa fa-certificate fa-fw cv-margin-right cv-xxlarge cv-text-teal"></i>Certificates
                         <i class="fa fa-chevron-down cv-right-chevron-down" aria-hidden="true"></i>
                     </h2>
-                    <div id="certificates" class="cv-container cv-hide ">
+                    <div id="certificates" class="cv-container cv-hide cv-show">
                         <div class="cv-container">
                             <h5 class="cv-opacity">
                                 <b>Google - AdWords Mobile Certification</b>
@@ -416,7 +416,7 @@
                         <i class="fa fa-heart fa-fw cv-margin-right cv-xxlarge cv-text-teal"></i>Volunteering
                         <i class="fa fa-chevron-down cv-right-chevron-down" aria-hidden="true"></i>
                     </h2>
-                    <div id="volunteering" class="cv-container cv-hide ">
+                    <div id="volunteering" class="cv-container cv-hide cv-show">
                         <div class="cv-container">
                             <h5 class="cv-opacity">
                                 <b>Microsoft</b>
